--- a/gghospital.css
+++ b/gghospital.css
@@ -162,9 +162,9 @@ input {
   left: 65.5%;
   cursor: pointer;
 }
-
+/* 
 .sectiontwo {
-  margin-top: 10%;
+  margin-top: 25%;
   margin-left: 6.5%;
   display: flex;
   font-family: Arial, Helvetica, sans-serif;
@@ -204,7 +204,46 @@ input {
   margin-right: 6.5%;
   justify-content: space-between;
   align-items: flex-start;
-}
+} */
+.sectiontwo {
+    font-family: Arial, Helvetica, sans-serif;
+    margin-top: 100px;
+    
+    margin-left: 7%;
+  }
+  .sectiontwo1 {
+      margin-top: 15%;
+      
+    
+  }
+ 
+  .flexcont1 h3 {
+    text-align: left;
+    font-size: 28px;
+  }
+  .flexcontainer {
+    display: flex;
+    
+    margin-right: 4%;
+  }
+  .flexcont1 {
+    flex: 1;
+    text-align: left;
+    margin-top: 2%;
+  }
+  .flexcont1 img {
+    height: 310px;
+    width: 370px;
+  }
+  .flexcont1 p {
+    text-align: left;
+    
+  }
+
+
+
+
+
 
 .threedoc {
   margin-top: 200px;
@@ -250,6 +289,7 @@ input {
   align-items: center;
 }
 .specialistmaintext {
+    margin-top: 15%;
   text-align: center;
 }
 .specialistmaintext p {
@@ -275,6 +315,7 @@ input {
 .flexspecialist1 p {
   color: #211e1e;
 }
+
 
 .button2 {
   font-family: Arial, Helvetica, sans-serif;
@@ -316,7 +357,8 @@ input {
   .surgery
   {
    
-margin-top: 15%;
+margin-top: 10%;
+
   }
   .surgerysub
   {
@@ -333,8 +375,203 @@ margin-top: 15%;
   {
 flex:1;
   }
+  .surgerycontent p
+  {
+  font-size: small;
+  }
   .surgerycontent img
   {
-    height: 250px;
-    width: 400px;
+    height: 200px;
+    width: 350px;
   }
+
+  .bluebg
+  {
+    margin-top: 50px;
+    background-color: #e8f9f6;
+    
+    height: 500px;
+   
+    margin-top: -180px; 
+  }
+  
+  .sub-content
+  {
+    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    height: 200px;
+    background-color:white;
+    background-image:url(white-bg.png);
+    width: 800px;
+    height: 180px;
+    border-radius: 10px;
+    align-items: center;
+    padding-left: 80px;
+    position: absolute;
+    z-index: 1;
+    margin-left: 200px;
+    margin-top: 20%;
+  }
+  .subform
+  {
+    display: flex;
+    align-items: center;
+    
+    
+  }
+  .sub-button
+  {
+    position: absolute;
+    padding: 14px 20px;
+    background-color: rgb(32,189,165);
+    font-size: smaller;
+    
+    border: none;
+    border-radius: 2px;
+    cursor: pointer;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+  margin-right: 50px;
+  bottom: 68px;
+  right: 44px;
+
+  }
+  .email
+  {
+    margin-left: 290px;
+    border: none;
+    padding: 2px 10px;
+    border-radius: 2px;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+  }
+
+  .final
+  {
+    
+  }
+  .onetwothree
+  {
+    margin-top: 5%;
+    margin-left: 8%;
+    display: flex;
+  }
+  .one
+  {
+    
+flex:1;
+  }
+  .twohead
+  {
+    align-items: right;
+    margin-left: 400px;
+flex:1;
+  }
+  .threehead
+  {
+    
+flex:1;
+  }
+  .two
+  {
+   
+    display: grid;
+  grid-template-columns: 100px 100px;
+  }
+  .three
+  {
+    display: grid;
+  grid-template-columns: 100px 100px;
+  }
+  .one p
+  {
+    font-size: small;
+  }
+  .one img
+  {
+    height: 66px;
+    width: 173px;
+  }
+  .two p
+  {
+    font-size: small;
+  }
+  .three p
+  {
+    font-size: small;
+  }
+  .line 
+  {
+    margin-left: 8%;
+    margin-right: 8%;
+    
+    
+    border: color(grey);
+  }
+  .four
+  {
+    margin-left: 8%;
+    display: flex;
+    margin-right: 7%;
+    justify-content: space-evenly;
+    margin-bottom: 5%;
+  }
+  .fourone
+  {
+    flex: 1;
+    font-size: small;
+    margin-left: 20px;
+    
+  }
+  .fourone img
+  {
+    position: relative;
+    height: 15px;
+    width: 15px;
+   bottom:-30px;
+   left: -20px;
+  }
+.fourtwo
+{
+    
+    flex:1;
+    font-size: small;
+    padding-left: 5%;
+
+}
+.foutwo img
+{
+  position: relative;
+  height: 15px;
+  width: 15px;
+  
+
+}
+.fourthree
+{
+    flex:1;
+    font-size: small;
+    
+}
+.fouthree img
+{
+  position: absolute;
+  height: 15px;
+  width: 15px;
+}
+.fourfour
+{
+    flex:1;
+    font-size:medium;
+}
+.fourfour img
+{
+    
+    height: 30px;
+    width: 30px;
+    margin-right:8px;
+    
+}
+.finaltext
+{
+    text-align: center;
+    font-size: xx-small;
+}
