--- a/gghospital.css
+++ b/gghospital.css
@@ -219,7 +219,7 @@ input {
  
   .flexcont1 h3 {
     text-align: left;
-    font-size: 28px;
+    
   }
   .flexcontainer {
     display: flex;
@@ -510,57 +510,72 @@ flex:1;
   {
     margin-left: 8%;
     display: flex;
+    justify-content: space-around;
     margin-right: 7%;
-    justify-content: space-evenly;
-    margin-bottom: 5%;
+    align-items: center;
+    
+   
+    
+
   }
   .fourone
   {
-    flex: 1;
+    display: flex;
     font-size: small;
     margin-left: 20px;
+    align-items: center;
     
   }
   .fourone img
   {
-    position: relative;
+   
     height: 15px;
     width: 15px;
-   bottom:-30px;
-   left: -20px;
+    margin-right: 10px;
+  
+  
   }
 .fourtwo
 {
     
-    flex:1;
+    display: flex;
     font-size: small;
-    padding-left: 5%;
+    padding-left: 50px;
+    align-items: center;
+    margin-right: 5px;
 
 }
-.foutwo img
+.fourtwo img
 {
-  position: relative;
-  height: 15px;
-  width: 15px;
+  margin-right: 5px;
+  height: 10px;
+  width: 10px;
+  
+  
   
 
 }
 .fourthree
 {
-    flex:1;
+    display: flex;
     font-size: small;
+    align-items: center;
     
 }
-.fouthree img
+.fourthree img
 {
-  position: absolute;
+  margin-right: 10px;
   height: 15px;
   width: 15px;
 }
 .fourfour
 {
-    flex:1;
+    
+   
+    
     font-size:medium;
+    
+    
 }
 .fourfour img
 {
@@ -568,6 +583,7 @@ flex:1;
     height: 30px;
     width: 30px;
     margin-right:8px;
+    margin-bottom: 10px;
     
 }
 .finaltext
