--- a/gghospital.css
+++ b/gghospital.css
@@ -582,8 +582,10 @@ flex:1;
     
     height: 30px;
     width: 30px;
-    margin-right:8px;
-    margin-bottom: 10px;
+    position: relative;
+    bottom: 15px;
+    padding-left: 5px;
+   
     
 }
 .finaltext
